vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_match_expr.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_match_expr.vv:5:4: error: expression evaluated but not used
    3 |     (match 0 {
    4 |         0 {
    5 |             $embed_file(@FILE)
      |             ~~~~~~~~~~~~~~~~~~
    6 |         }
    7 |         else {
