vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_match_expr.vv
fn main() {
	fallback := $embed_file(@FILE)
	(match 0 {
		0 {
			$embed_file(@FILE)
		}
		else {
			fallback
		}
	})
}
